--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.4",
+    "react-router-dom": "^6.27.0",
     "recharts": "^2.13.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
