--- a/client/package.json
+++ b/client/package.json
@@ -39,11 +39,13 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tabler/icons-react": "^3.19.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.8",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.452.0",
     "next-themes": "^0.3.0",
