--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@ably/spaces": "^0.4.0",
+    "@auth0/auth0-react": "^2.2.4",
+    "@clerk/clerk-react": "^5.11.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
