--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.9",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.4",
     "react-router-dom": "^6.27.0",
