--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --hot run src/index.ts"
+    "dev": "bun --hot run index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
