add build script

--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --hot run index.ts"
+    "dev": "bun --hot run index.ts",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/bun": "latest",
