--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "@clerk/clerk-react": "^5.11.0",
     "@types/express": "^5.0.0",
     "cors": "^2.8.5",
+    "docker": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-openid-connect": "^2.17.1",
