--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
         "@radix-ui/react-tooltip": "^1.1.3",
         "@react-three/drei": "^9.114.3",
         "@react-three/fiber": "^8.17.10",
+        "@stellarogs/tonejs-instruments": "^1.0.0",
         "@tabler/icons-react": "^3.19.0",
         "ably": "^2.4.1",
         "class-variance-authority": "^0.7.0",
